--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#0a0008" />
-  <meta name="description" content="Dark Gothic Fantasy Open World RPG - Blood Moon Chronicles" />
-  <title>Blood Moon Chronicles — Dark Gothic RPG</title>
+  <meta name="description" content="Premium Dark Fantasy Open World RPG" />
+  <title>Premium Mobile RPG</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
