--- a/index.html
+++ b/index.html
@@ -1,83 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="theme-color" content="#0a0008" />
   <meta name="description" content="Premium Dark Fantasy Open World RPG" />
   <title>Premium Mobile RPG</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      width: 100%; height: 100%; overflow: hidden;
-      background: #0a0008; touch-action: none;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #0a0008;
+      touch-action: none;
       -webkit-tap-highlight-color: transparent;
-      user-select: none; -webkit-user-select: none;
+      -webkit-user-select: none;
+      user-select: none;
       font-family: 'Inter', sans-serif;
     }
+
     #gameCanvas {
-      width: 100%; height: 100%; display: block;
-      outline: none; touch-action: none; position: absolute; top:0; left:0; z-index: 1;
+      width: 100%;
+      height: 100%;
+      display: block;
+      outline: none;
+      touch-action: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
     }
+
     #ui-layer {
-      position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-      pointer-events: none; z-index: 100;
-      color: white; overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 100;
+      color: white;
+      overflow: hidden;
     }
+
     /* Let interactive UI elements capture clicks */
-    .interactive { pointer-events: auto; cursor: pointer; }
-    
+    .interactive {
+      pointer-events: auto;
+      cursor: pointer;
+    }
+
     #loading-screen {
-      position: fixed; inset: 0;
+      position: fixed;
+      inset: 0;
       background: radial-gradient(ellipse at center bottom, #1a0011 0%, #0a0008 70%);
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      z-index: 9999; transition: opacity 0.8s ease-out;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.8s ease-out;
     }
-    #loading-screen.fade-out { opacity: 0; pointer-events: none; }
+
+    #loading-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
     .loading-title {
-      font-family: 'Cinzel', serif; font-size: 28px; font-weight: 700; color: #c4302b;
+      font-family: 'Cinzel', serif;
+      font-size: 28px;
+      font-weight: 700;
+      color: #c4302b;
       text-shadow: 0 0 30px rgba(196, 48, 43, 0.6), 0 0 60px rgba(196, 48, 43, 0.3);
-      letter-spacing: 6px; text-transform: uppercase; margin-bottom: 40px;
+      letter-spacing: 6px;
+      text-transform: uppercase;
+      margin-bottom: 40px;
     }
+
     .loading-bar-container {
-      width: 60%; max-width: 300px; height: 3px; background: rgba(196, 48, 43, 0.15);
-      border-radius: 2px; overflow: hidden;
+      width: 60%;
+      max-width: 300px;
+      height: 3px;
+      background: rgba(196, 48, 43, 0.15);
+      border-radius: 2px;
+      overflow: hidden;
     }
+
     .loading-bar-fill {
-      height: 100%; width: 0%;
+      height: 100%;
+      width: 0%;
       background: linear-gradient(90deg, #8b1a1a, #c4302b, #ff4444);
       box-shadow: 0 0 10px rgba(196, 48, 43, 0.8);
-      border-radius: 2px; transition: width 0.3s ease-out;
+      border-radius: 2px;
+      transition: width 0.3s ease-out;
     }
+
     .loading-text {
-      font-family: 'Cinzel', serif; font-size: 12px; color: rgba(196, 48, 43, 0.5);
-      letter-spacing: 3px; margin-top: 20px; font-weight: 500;
+      font-family: 'Cinzel', serif;
+      font-size: 12px;
+      color: rgba(196, 48, 43, 0.5);
+      letter-spacing: 3px;
+      margin-top: 20px;
+      font-weight: 500;
     }
-    
+
     /* Global classes for premium UI */
     .glass-panel {
       background: rgba(8, 8, 14, 0.7);
-      backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
+      backdrop-filter: blur(12px);
       border: 1px solid rgba(120, 90, 255, 0.2);
       box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
     }
+
     .action-btn {
       transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
+
     .action-btn:active {
       transform: scale(0.92);
       filter: brightness(1.2);
     }
   </style>
 </head>
+
 <body>
   <div id="loading-screen">
     <div class="loading-title">Blood Moon</div>
@@ -90,4 +152,5 @@
   <div id="ui-layer"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
+
 </html>
